# tes3util

./: .gitignore  .gitmodules  Cargo.toml  README.md  graph.dot
.devcontainer/: devcontainer.json
.github/workflows/: beta.yml  release.yml  rust.yml
src/: atlas_task.rs  deserialize_task.rs  dump_task.rs  lib.rs  main.rs  pack_task.rs  serialize_task.rs  sql_task.rs
tests/: integration_tests.rs  unit_tests.rs
tests/assets/: Ex_colony_bardoor.NIF
