[package]
name = "tes3util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
serde_json = "1.0"
walkdir = "2.5.0"
rayon = "1.10.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
fnv_rs = "0.4"
log = { version = "0.4", features = ["std"] }

[dependencies.tes3]
path = "tes3"
default-features = false
features = ["default", "serde"]
