[package]
name = "tes3util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_yaml_ng = "0.10"
toml = "0.9"
serde_json = "1.0"
walkdir = "2.5"
rayon = "1.11"
rusqlite = { version = "0.37", features = ["bundled"] }
fnv_rs = "0.4"
log = { version = "0.4", features = ["std"] }

[dependencies.tes3]
path = "tes3"
default-features = false
features = ["default", "serde"]
